--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  http: ^1.1.0 
+  share_plus: ^7.2.1
+  lottie: ^2.6.0
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +61,15 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/animation/session_5.json
+    - assets/animation/session_10.json
+    - assets/animation/session_15.json
+    - assets/animation/session_60.json
+    - assets/audio/breath_60.mp3
+    - assets/audio/breath_5.mp3
+    - assets/audio/breath_10.mp3
+    - assets/audio/breath_15.mp3
 
   # To add assets to your application, add an assets section, like this:
   # assets:
