--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^5.5.2
   fluttertoast: ^8.2.12
   cloud_firestore: ^5.6.6
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
